--- a/404.html
+++ b/404.html
@@ -2,11 +2,9 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>HTML Sample</title>
-  <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="sample.js"></script>
+  <title>404</title>
 </head>
 <body>
-404.html
+<h1>404</h1>
 </body>
 </html>
