--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>HTML Sample</title>
-  <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="sample.js"></script>
+  <title>index</title>
+  <meta http-equiv="refresh"content="0;URL=https://www.aqua-ix.com/">
 </head>
 <body>
-index.html
 </body>
 </html>
