--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>index</title>
-  <meta http-equiv="refresh"content="0;URL=https://www.aqua-ix.com/">
+  <title>AQUA</title>
+  <script type="text/javascript">
+    var path = window.location.pathname;
+    var newUrl = "https://www.aqua-ix.com" + path;
+    window.location.href = newUrl;
+  </script>
 </head>
 <body>
 </body>
