--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>AQUA</title>
-  <script type="text/javascript">
-    var path = window.location.pathname;
-    var newUrl = "https://www.aqua-ix.com" + path;
-    window.location.href = newUrl;
-  </script>
+  <meta http-equiv="refresh"content="0;URL=https://www.aqua-ix.com/">
 </head>
 <body>
 </body>
