--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>AQUA</title>
-  <meta http-equiv="refresh"content="0;URL=https://www.aqua-ix.com/">
+  <meta http-equiv="refresh"content="0;URL=https://www.aqua-ix.com/apps">
 </head>
 <body>
 </body>
